--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,15 @@
     <main>
         <div class="wrapper">
             <% products.forEach((product)=> { -%>
-                <div class="ads">
+                <a class="ads" href="/post/<%= product.id %>">
                     <h3>
                         <%= product.title %>
                     </h3>
                     <p>
                         <%= product.desc %>
                     </p>
-                </div>
+                    <img src="/uploads/<%= product.image[0] %>">
+                </a>
             <% }) -%>
         </div>
         <%- include("modal.ejs") -%>
