--- a/views/post.ejs
+++ b/views/post.ejs
@@ -16,6 +16,7 @@
             <% }) -%>
         </div>
     </main>
+    <%- include("comment.ejs") -%>
     <%- include("footer.ejs") -%>
 </body>
 </html>
